{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 367,
  "lineage": "949f719f-bae3-a983-0b02-c5705e72d9e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "global-private-sg-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:798228588916:security-group/sg-04850ddc436ec1b70",
            "description": "global-private-sg-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04850ddc436ec1b70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e705db57f1d582c1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "global-private-sg-db",
            "name_prefix": "",
            "owner_id": "798228588916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "global-private-sg-db"
            },
            "tags_all": {
              "Name": "global-private-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-063af13f7b27b13e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.global-public-sg-bastion",
            "aws_vpc.global-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "global-public-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:798228588916:security-group/sg-0e705db57f1d582c1",
            "description": "global-public-sg-bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e705db57f1d582c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "global-public-sg-bastion",
            "name_prefix": "",
            "owner_id": "798228588916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "global-public-sg-bastion"
            },
            "tags_all": {
              "Name": "global-public-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-063af13f7b27b13e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.global-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "global-private-subnet-a-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:798228588916:subnet/subnet-0a2bdec68ffcf1e3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.100.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2bdec68ffcf1e3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798228588916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "global-private-subnet-a-db"
            },
            "tags_all": {
              "Name": "global-private-subnet-a-db"
            },
            "vpc_id": "vpc-063af13f7b27b13e7"
          },
          "dependencies": [
            "aws_vpc.global-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "global-private-subnet-c-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:798228588916:subnet/subnet-0fc5134be1024a322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.100.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc5134be1024a322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798228588916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "global-private-subnet-c-db"
            },
            "tags_all": {
              "Name": "global-private-subnet-c-db"
            },
            "vpc_id": "vpc-063af13f7b27b13e7"
          },
          "dependencies": [
            "aws_vpc.global-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "global-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:798228588916:vpc/vpc-063af13f7b27b13e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-05095e474f1c9bbb5",
            "default_route_table_id": "rtb-04757fd312c18528a",
            "default_security_group_id": "sg-069cf45888a51c4da",
            "dhcp_options_id": "dopt-0f59d5840b98ed4f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-063af13f7b27b13e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04757fd312c18528a",
            "owner_id": "798228588916",
            "tags": {
              "Name": "global-vpc"
            },
            "tags_all": {
              "Name": "global-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}